test/compile_errors/err_target_non_string.w
//! expect-error: requires a string literal

@[target(aarch64)]
fn f() -> i32:
    1

fn main:
    print("x")
